sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/Feedstock_Test_Results__c.object-meta.xml
<CustomObject>
    <description>Results of lab tests on different feedstock samples.</description>
    <label>Feedstock Test Result</label>
    <nameField>
        <displayFormat>Test-{000000}</displayFormat>
        <label>Test Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedstock Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>