sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Absolute_larvae_yield_g_DM__c.field-meta.xml
<CustomField>
    <fullName>Absolute_larvae_yield_g_DM__c</fullName>
    <label>Absolute larvae yield g (DM)</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>