sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Biogas_Methane_Content__c.field-meta.xml
<CustomField>
    <fullName>Biogas_Methane_Content__c</fullName>
    <label>Biogas Methane Content</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>