sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/BSF_Score__c.field-meta.xml
<CustomField>
    <fullName>BSF_Score__c</fullName>
    <inlineHelpText>On a scale of 1-10, with 1 being &quot;extremely poor&quot; and 10 being &quot;excellent&quot;, please assign a score to indicate the suitability of this sample for BSF processes.</inlineHelpText>
    <label>BSF Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>