sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Bulk_Density_g_cm3__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Density_g_cm3__c</fullName>
    <label>Bulk Density (g/cm3)</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>