sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/C_DM__c.field-meta.xml
<CustomField>
    <fullName>C_DM__c</fullName>
    <label>C (%DM)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>