sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/C_N__c.field-meta.xml
<CustomField>
    <fullName>C_N__c</fullName>
    <description>C:N Ratio</description>
    <label>C:N</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>