sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Ca_DM__c.field-meta.xml
<CustomField>
    <fullName>Ca_DM__c</fullName>
    <label>Ca (%DM)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>