sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Carbohydrates__c.field-meta.xml
<CustomField>
    <fullName>Carbohydrates__c</fullName>
    <label>Carbohydrates %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>