sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Carbon__c.field-meta.xml
<CustomField>
    <fullName>Carbon__c</fullName>
    <label>Carbon (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>