sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/CH4_Yield_L_kg__c.field-meta.xml
<CustomField>
    <fullName>CH4_Yield_L_kg__c</fullName>
    <label>CH4 Yield (L/kg)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>