sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Completed_Tests_del__c.field-meta.xml
<CustomField>
    <fullName>Completed_Tests_del__c</fullName>
    <description>Lab tests that were conducted on the feedstock sample</description>
    <inlineHelpText>Lab tests that were successfully conducted on the feedstock sample out of the requested tests.</inlineHelpText>
    <label>Completed Tests</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>