sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Crude_Fibre__c.field-meta.xml
<CustomField>
    <fullName>Crude_Fibre__c</fullName>
    <label>Crude Fibre %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>