sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Date_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Completion__c</fullName>
    <description>Day requested lab tests are completed</description>
    <inlineHelpText>The date of completed testing</inlineHelpText>
    <label>Date of Completion</label>
    <type>Date</type>
</CustomField>