sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Density_g_cm3__c.field-meta.xml
<CustomField>
    <fullName>Density_g_cm3__c</fullName>
    <label>Density (g/cm3)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>