sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/E_C_mS__c.field-meta.xml
<CustomField>
    <fullName>E_C_mS__c</fullName>
    <label>E/C mS</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>