sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/E_coli_CFU_g__c.field-meta.xml
<CustomField>
    <fullName>E_coli_CFU_g__c</fullName>
    <label>E.coli (CFU/g)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>