sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Energy_kcal_100g__c.field-meta.xml
<CustomField>
    <fullName>Energy_kcal_100g__c</fullName>
    <label>Energy kcal/100g</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>