sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Fe_ppm__c.field-meta.xml
<CustomField>
    <fullName>Fe_ppm__c</fullName>
    <label>Fe (ppm)</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>