sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Feedstock_Description__c.field-meta.xml
<CustomField>
    <fullName>Feedstock_Description__c</fullName>
    <formula>Feedstock_Leads__r.Feedstock_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feedstock Description</label>
    <type>Text</type>
</CustomField>