sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Feedstock_Fat_Content_wt__c.field-meta.xml
<CustomField>
    <fullName>Feedstock_Fat_Content_wt__c</fullName>
    <label>Feedstock Fat Content (wt%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>