sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Feedstock_Leads__c.field-meta.xml
<CustomField>
    <fullName>Feedstock_Leads__c</fullName>
    <label>Feedstock Leads</label>
    <referenceTo>Feedstock_Leads__c</referenceTo>
    <relationshipLabel>Feedstock Test Results</relationshipLabel>
    <relationshipName>Feedstock_Test_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>