sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Feedstock_Protein_Content__c.field-meta.xml
<CustomField>
    <fullName>Feedstock_Protein_Content__c</fullName>
    <label>Feedstock Protein Content</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>