sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Feedstock_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Feedstock_Supplier__c</fullName>
    <formula>Feedstock_Leads__r.Feedstock_Supplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feedstock Supplier</label>
    <type>Text</type>
</CustomField>