sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Free_Airspace__c.field-meta.xml
<CustomField>
    <fullName>Free_Airspace__c</fullName>
    <label>Free Airspace (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>