sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/General_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_Comments__c</fullName>
    <label>General Comments</label>
    <type>TextArea</type>
</CustomField>