sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Heavy_Metals_Hg__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Metals_Hg__c</fullName>
    <label>Heavy Metals: Hg</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>