sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/K_mg_g__c.field-meta.xml
<CustomField>
    <fullName>K_mg_g__c</fullName>
    <label>K (mg/g)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>