sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Mg__c.field-meta.xml
<CustomField>
    <fullName>Mg__c</fullName>
    <label>Mg (%DM)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>