sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Moisture__c.field-meta.xml
<CustomField>
    <fullName>Moisture__c</fullName>
    <label>Moisture %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>