sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Moisture_wt__c.field-meta.xml
<CustomField>
    <fullName>Moisture_wt__c</fullName>
    <label>Moisture (wt%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>