sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/N_DM__c.field-meta.xml
<CustomField>
    <fullName>N_DM__c</fullName>
    <label>N (%DM)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>