sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/N_NH3_Mg_g__c.field-meta.xml
<CustomField>
    <fullName>N_NH3_Mg_g__c</fullName>
    <label>N-NH3 (Mg/g)</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>