sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/N_NO2__c.field-meta.xml
<CustomField>
    <fullName>N_NO2__c</fullName>
    <label>N-NO2</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>