sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/N_NO3_mg_gTS__c.field-meta.xml
<CustomField>
    <fullName>N_NO3_mg_gTS__c</fullName>
    <label>N-NO3 (mg/gTS)</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>