sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Na_ppm__c.field-meta.xml
<CustomField>
    <fullName>Na_ppm__c</fullName>
    <label>Na (ppm)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>