sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Name_of_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Analyst__c</fullName>
    <description>Name of Analyst(s)</description>
    <inlineHelpText>Name of person or persons who completed testing</inlineHelpText>
    <label>Name of Analyst(s)</label>
    <type>TextArea</type>
</CustomField>