sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <inlineHelpText>Notes about test results, or misc. results that do not fit into other categories.</inlineHelpText>
    <label>Other</label>
    <type>TextArea</type>
</CustomField>