sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Protein__c.field-meta.xml
<CustomField>
    <fullName>Protein__c</fullName>
    <label>Protein % dry matter basis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>