sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Protein_in_larvae_wt__c.field-meta.xml
<CustomField>
    <fullName>Protein_in_larvae_wt__c</fullName>
    <label>Protein in larvae (wt%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>