sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Raw_Biogas_Yield_ml_L__c.field-meta.xml
<CustomField>
    <fullName>Raw_Biogas_Yield_ml_L__c</fullName>
    <description>millilitres of Biogas/litre of substrate waste</description>
    <inlineHelpText>millilitres of Biogas/litre of substrate waste</inlineHelpText>
    <label>Raw Biogas Yield (ml/L)</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>