sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Required_Feedstock_Tests__c.field-meta.xml
<CustomField>
    <fullName>Required_Feedstock_Tests__c</fullName>
    <formula>Feedstock_Leads__r.Tests_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Feedstock Tests</label>
    <type>Text</type>
</CustomField>