sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/S_DM__c.field-meta.xml
<CustomField>
    <fullName>S_DM__c</fullName>
    <label>S (%DM)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>