sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Supply_ID__c.field-meta.xml
<CustomField>
    <fullName>Supply_ID__c</fullName>
    <formula>Feedstock_Leads__r.Supply_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supply ID</label>
    <type>Text</type>
</CustomField>