sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status of requested tests</description>
    <inlineHelpText>Check when all requested test results have been completed</inlineHelpText>
    <label>Test Status</label>
    <type>Checkbox</type>
</CustomField>