sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Testing_Lab__c.field-meta.xml
<CustomField>
    <fullName>Testing_Lab__c</fullName>
    <description>Name of lab where tests were conducted</description>
    <inlineHelpText>Name of lab where tests were conducted</inlineHelpText>
    <label>Testing Lab</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sanergy Lab</fullName>
            </value>
            <value>
                <fullName>Cropnuts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>