sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/TOC__c.field-meta.xml
<CustomField>
    <fullName>TOC__c</fullName>
    <label>TOC</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>