sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Total_Ash__c.field-meta.xml
<CustomField>
    <fullName>Total_Ash__c</fullName>
    <label>Total Ash %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>