sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/Total_Solids__c.field-meta.xml
<CustomField>
    <fullName>Total_Solids__c</fullName>
    <label>Total Solids (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>