sfSandBoxCode/force-app/main/default/objects/Feedstock_Test_Results__c/fields/VFA_mg_l__c.field-meta.xml
<CustomField>
    <fullName>VFA_mg_l__c</fullName>
    <label>VFA (mg/l)</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>